[gd_scene load_steps=5 format=3 uid="uid://d3m3qpbtb01bc"]

[ext_resource type="Script" uid="uid://2tw37cacj1ay" path="res://ui/game_ui.gd" id="1_rns2u"]
[ext_resource type="FontFile" uid="uid://dmebi7ig6ljst" path="res://poco/Poco.ttf" id="2_u001w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rns2u"]
bg_color = Color(0.20718183, 0.18020247, 0.3382246, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u001w"]
bg_color = Color(0.24313726, 0.30588236, 0.8, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_rns2u")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 100.0

[node name="XPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_rns2u")
theme_override_styles/fill = SubResource("StyleBoxFlat_u001w")
max_value = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_u001w")
theme_override_font_sizes/font_size = 30
text = "Level 1"

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5372549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_u001w")
theme_override_font_sizes/font_size = 25
text = "Gold 0"

[node name="KillsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Kills 0"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00:00"
